project(SpeechControlApplication)
cmake_minimum_required(VERSION 2.8)
set(CMAKE_INCLUDE_CURRENT_DIR ON)

## Required files
file(GLOB SPCHCNTRL_APP_SRCS "*.cpp")
file(GLOB SPCHCNTRL_APP_HDRS "*.hpp")
file(GLOB SPCHCNTRL_APP_PRIVSRCS "*.cxx")
file(GLOB SPCHCNTRL_APP_PRIVHDRS "*.hxx")
file(GLOB SPCHCNTRL_VOXFORGE_HDRS "services/voxforge/*.hpp")
file(GLOB SPCHCNTRL_VOXFORGE_SRCS "services/voxforge/*.cpp")
file(GLOB SPCHCNTRL_VOXFORGE_PRIVHDRS "services/voxforge/*.hxx")
file(GLOB SPCHCNTRL_VOXFORGE_PRIVSRCS "services/voxforge/*.cxx")
file(GLOB SPCHCNTRL_DICTATION_HDRS "services/dictation/*.hpp")
file(GLOB SPCHCNTRL_DICTATION_SRCS "services/dictation/*.cpp")
file(GLOB SPCHCNTRL_DICTATION_PRIVHDRS "services/dictation/*.hxx")
file(GLOB SPCHCNTRL_DICTATION_PRIVSRCS "services/dictation/*.cxx")
file(GLOB SPCHCNTRL_DESKTOPCONTROL_HDRS "services/desktopcontrol/*.hpp")
file(GLOB SPCHCNTRL_DESKTOPCONTROL_SRCS "services/desktopcontrol/*.cpp")
file(GLOB SPCHCNTRL_DESKTOPCONTROL_PRIVHDRS "services/desktopcontrol/*.hxx")
file(GLOB SPCHCNTRL_DESKTOPCONTROL_PRIVSRCS "services/desktopcontrol/*.cxx")
file(GLOB SPCHCNTRL_SESSIONS_HDRS "sessions/*.hpp")
file(GLOB SPCHCNTRL_SESSIONS_SRCS "sessions/*.cpp")
file(GLOB SPCHCNTRL_SESSIONS_PRIVHDRS "sessions/*.hxx")
file(GLOB SPCHCNTRL_SESSIONS_PRIVSRCS "sessions/*.cxx")
file(GLOB SPCHCNTRL_SERVICES_HDRS "services/*.hpp")
file(GLOB SPCHCNTRL_SERVICES_SRCS "services/*.cpp")
file(GLOB SPCHCNTRL_SERVICES_PRIVHDRS "services/*.hxx")
file(GLOB SPCHCNTRL_SERVICES_PRIVSRCS "services/*.cxx")
file(GLOB_RECURSE SPCHCNTRL_UI_HDRS "ui/*.hpp")
file(GLOB_RECURSE SPCHCNTRL_UI_SRCS "ui/*.cpp")
file(GLOB_RECURSE SPCHCNTRL_UI_PRIVHDRS "ui/*.hxx")
file(GLOB_RECURSE SPCHCNTRL_UI_PRIVSRCS "ui/*.cxx")

## Needed variables for the SpeechControl application.
set(SPCHCNTRL_APP_COMPILE_FLAGS ${SPCHCNTRL_COMPILE_FLAGS} ${SPCHCNTRL_LIB_COMPILE_FLAGS})
set(SPCHCNTRL_APP_COMPILE_FLAGS_DEBUG ${SPCHCNTRL_COMPILE_FLAGS_DEBUG} ${SPCHCNTRL_LIB_COMPILE_FLAGS_DEBUG})
set(SPCHCNTRL_APP_COMPILE_DEFINITIONS ${SPCHCNTRL_COMPILE_DEFINITIONS} ${SPCHCNTRL_LIB_COMPILE_DEFINITIONS})
set(SPCHCNTRL_APP_INCLUDE_DIR "${SPCHCNTRL_INCLUDE_DIR}/app")
set(SPCHCNTRL_APP_INCLUDE_DIRS "${SPCHCNTRL_INCLUDE_DIR}"
    ${SPCHCNTRL_LIB_INCLUDE_DIR}
    ${SPCHCNTRL_APP_INCLUDE_DIR}
    ${SPCHCNTRL_INCLUDE_DIRS}
    ${PHONON_INCLUDE_DIRS}
    ${XDO_INCLUDE_DIRS}
    ${HUNSPELL_INCLUDE_DIRS}
    ${SPCHCNTRL_LIB_INCLUDE_DIRS})
set(SPCHCNTRL_APP_LIBRARIES ${SPCHCNTRL_LIBRARIES}
    ${SPCHCNTRL_LIB_LIBRARIES}
    ${QT_QTGUI_LIBRARY}
    ${QT_QTDBUS_LIBRARY}
    ${QT_QTWEBKIT_LIBRARIES}
    ${QT_QTDECLARATIVE_LIBRARY}
    ${PHONON_LIBRARIES}
    ${XDO_LIBRARIES}
    ${HUNSPELL_LIBRARIES}
    speechcontrol)
set(SPCHCNTRL_APP_BUILD_INCLUDE_DIRS ${SPCHCNTRL_APP_INCLUDE_DIRS}
    ${SPCHCNTRL_BUILD_INCLUDE_DIRS}
    "${CMAKE_SOURCE_DIR}/src/lib"
    "${PROJECT_BINARY_DIR}"
    "${PROJECT_SOURCE_DIR}")

list(REMOVE_ITEM SPCHCNTRL_APP_BUILD_INCLUDE_DIRS ${SPCHCNTRL_APP_INCLUDE_DIR})
list(REMOVE_ITEM SPCHCNTRL_APP_BUILD_INCLUDE_DIRS ${SPCHCNTRL_INCLUDE_DIR})

## Needed flags for SphinxTrain apps.

if (CMAKE_BUILD_TYPE STREQUAL "Debug")
    set(SPCHCNTRL_APP_COMPILE_FLAGS "${SPCHCNTRL_APP_COMPILE_FLAGS} ${SPCHCNTRL_APP_COMPILE_FLAGS_DEBUG}")
endif (CMAKE_BUILD_TYPE STREQUAL "Debug")

include_directories(${SPCHCNTRL_APP_BUILD_INCLUDE_DIRS}
    ${SPHINXTRAIN_BUILD_INCLUDE_DIRS})

# Some important definitions.
add_definitions(${SPCHCNTRL_APP_COMPILE_DEFINITIONS} -DBOOST_TT_HAS_OPERATOR_HPP_INCLUDED)
list(APPEND QT_DEFINITIONS "-DBOOST_TT_HAS_OPERATOR_HPP_INCLUDED")

## Add sub-directories.
add_subdirectory(cmake)
add_subdirectory(sessions)
add_subdirectory(services)
add_subdirectory(ui)

configure_file("${PROJECT_SOURCE_DIR}/config.hpp.in"
               "${PROJECT_SOURCE_DIR}/config.hpp" @ONLY)

# Add build information for front-end application and KDE features
include(application.cmake)
add_subdirectory(kde)

## Installs
install(FILES ${SPCHCNTRL_APP_HDRS}
    DESTINATION "${SPCHCNTRL_APP_INCLUDE_DIR}"
    COMPONENT "dev")

install(FILES ${SPCHCNTRL_APP_PRIVHDRS}
    DESTINATION "${SPCHCNTRL_APP_INCLUDE_DIR}-private"
    COMPONENT "dev")