project(SpeechControlApplication)
cmake_minimum_required(VERSION 2.8)
set(CMAKE_INCLUDE_CURRENT_DIR ON)

## Needed variables for the SpeechControl application.
set(SPCHCNTRL_APP_COMPILE_FLAGS ${SPCHCNTRL_COMPILE_FLAGS} ${SPCHCNTRL_LIB_COMPILE_FLAGS})
set(SPCHCNTRL_APP_COMPILE_FLAGS_DEBUG ${SPCHCNTRL_COMPILE_FLAGS_DEBUG} ${SPCHCNTRL_LIB_COMPILE_FLAGS_DEBUG})
set(SPCHCNTRL_APP_COMPILE_DEFINITIONS ${SPCHCNTRL_COMPILE_DEFINITIONS}
    ${SPCHCNTRL_LIB_COMPILE_DEFINITIONS})
set(SPCHCNTRL_APP_INCLUDE_DIR "${SPCHCNTRL_INCLUDE_DIR}/app")
set(SPCHCNTRL_APP_INCLUDE_DIRS "${SPCHCNTRL_INCLUDE_DIR}"
    ${SPCHCNTRL_LIB_INCLUDE_DIR}
    ${SPCHCNTRL_APP_INCLUDE_DIR}
    ${SPCHCNTRL_INCLUDE_DIRS}
    ${QT_QTGUI_INCLUDE_DIR}
    ${QT_QTDECLARATIVE_INCLUDE_DIR}
    ${QT_QTDBUS_INCLUDE_DIR}
    ${SPCHCNTRL_LIB_INCLUDE_DIRS})
set(SPCHCNTRL_APP_LIBRARIES ${SPCHCNTRL_LIBRARIES}
    ${SPCHCNTRL_LIB_LIBRARIES}
    ${QT_QTGUI_LIBRARY}
    ${QT_QTDBUS_LIBRARY}
    ${QT_QTDECLARATIVE_LIBRARY}
    speechcontrol)
set(SPCHCNTRL_APP_BUILD_INCLUDE_DIRS ${SPCHCNTRL_APP_INCLUDE_DIRS}
    ${SPCHCNTRL_BUILD_INCLUDE_DIRS}
    "${PROJECT_BINARY_DIR}"
    "${PROJECT_SOURCE_DIR}")

list(REMOVE_ITEM SPCHCNTRL_APP_BUILD_INCLUDE_DIRS ${SPCHCNTRL_APP_INCLUDE_DIR})
list(REMOVE_ITEM SPCHCNTRL_APP_BUILD_INCLUDE_DIRS ${SPCHCNTRL_INCLUDE_DIR})

if (CMAKE_BUILD_TYPE STREQUAL "Debug")
    set(SPCHCNTRL_APP_COMPILE_FLAGS "${SPCHCNTRL_APP_COMPILE_FLAGS} ${SPCHCNTRL_APP_COMPILE_FLAGS_DEBUG}")
endif (CMAKE_BUILD_TYPE STREQUAL "Debug")

include_directories(${SPCHCNTRL_APP_BUILD_INCLUDE_DIRS})

## Add sub-directories.
add_subdirectory(cmake)

configure_file("${PROJECT_SOURCE_DIR}/global.hpp.in"
               "${PROJECT_SOURCE_DIR}/global.hpp" @ONLY)
configure_file("${PROJECT_SOURCE_DIR}/ui/global.hpp.in"
               "${PROJECT_SOURCE_DIR}/ui/global.hpp" @ONLY)

# Add build information for front-end application and KDE features
include(application.cmake)

## Installs
install(DIRECTORY   "${PROJECT_SOURCE_DIR}/"
        DESTINATION "${SPCHCNTRL_APP_INCLUDE_DIR}"
        COMPONENT "dev"
        FILES_MATCHING
            PATTERN "*.hpp"
            PATTERN "kde" EXCLUDE
            PATTERN "cmake" EXCLUDE)
